# Media-Player-Scrobbler-for-Simkl

./: .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  setup.iss  simkl-mps.spec  sitemap.xml  test_potplayer.py
.github/: FUNDING.yml  copilot-instructions.md  typos_config.toml
.github/workflows/: build-verification.yml  build.yml  create-release.yml  dependencies.yml  docs.yml  pr-checks.yml  publish-pypi.yml  tests.yml  typos.yml  webui.yml  windows-build.yml
configuration/: index.html
docs/: configuration.md  index.md  linux-guide.md  mac-guide.md  media-players.md  todo.md  troubleshooting.md  usage.md  watch-history.md  web-dashboard.md  windows-guide.md
linux-guide/: index.html
mac-guide/: index.html
media-players/: index.html
search/: search_index.json
simkl_mps/: __init__.py  cli.py  config_manager.py  credentials.py  main.py  media_cache.py  media_scrobbler.py  media_tracker.py  migration.py  monitor.py  process_manager.py  rewatch.py  season_resolver.py  simkl_api.py  tray_app.py  tray_base.py  tray_linux.py  tray_mac.py  tray_win.py  watch_history_manager.py  watched_library.py  window_detection.py
simkl_mps/players/: __init__.py  potplayer.py
simkl_mps/utils/: path_filter.py  updater.ps1  updater.sh
simkl_mps/watch-history-viewer/: index.html  script.js
simkl_mps/web/: __init__.py  api.py  auth.py  server.py
tests/: test_credentials.py  test_media_scrobbler_core.py  test_migration.py  test_path_filter.py  test_rewatch.py  test_season_resolver.py  test_simkl_api_client_id.py  test_tv_search_fallback.py  test_watch_history.py  test_watched_library.py  test_web_api.py  test_web_auth.py  test_window_detection.py
todo/: index.html
troubleshooting/: index.html
usage/: index.html
watch-history/: index.html
web-dashboard/: index.html
webui/: index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.tsx  api.ts  hooks.ts  main.tsx  styles.css
webui/src/pages/: Dashboard.tsx  History.tsx  Settings.tsx
windows-guide/: index.html
