[tool.poetry]
name = "simkl-mps"
version = "2.2.1"
description = "Automatic Media Scrobbler for Simkl"
authors = [
    "kavin <kavinthangavel.dev@gmail.com>",
]
license = "GPL-3.0"
readme = "README.md"
keywords = [
    "simkl",
    "scrobbler",
]
homepage = "https://github.com/ByteTrix/Media-Player-Scrobbler-for-Simkl"
repository = "https://github.com/ByteTrix/Media-Player-Scrobbler-for-Simkl"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
packages = [
    { include = "simkl_mps" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = ">=2.25.0"
guessit = ">=3.3.0"
python-dotenv = ">=0.15.0"
psutil = ">=5.8.0"
colorama = ">=0.4.4"
pystray = ">=0.19.0"
pillow = ">=11.2.0"
plyer = ">=2.0.0"

[tool.poetry.dependencies.winotify]
version = "^1.1.0"
markers = "sys_platform == 'win32'"

[tool.poetry.dependencies.pygetwindow]
version = ">=0.0.9"
markers = "sys_platform == 'win32'"

[tool.poetry.dependencies.pywin32]
version = ">=300"
markers = "sys_platform == 'win32'"

[tool.poetry.dependencies.python-xlib]
version = ">=0.31"
optional = true
markers = "sys_platform == 'linux'"

[tool.poetry.dependencies.pyobjc]
version = ">=7.3"
optional = true
markers = "sys_platform == 'darwin'"

[tool.poetry.dependencies.PyGObject]
version = ">=3.42.0"
optional = true
markers = "sys_platform == 'linux' and python_version >= '3.9' and python_version < '4.0'"

[tool.poetry.urls]
"Linux System Dependencies" = "https://github.com/ByteTrix/Media-Player-Scrobbler-for-Simkl/wiki/Installation#linux-installation"
"Bug Reports" = "https://github.com/ByteTrix/media-player-scrobbler-for-simkl/issues"
Documentation = "https://github.com/ByteTrix/media-player-scrobbler-for-simkl/wiki"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
flake8 = ">=5,<8"
pytest-mock = ">=3.6.1"
requests = ">=2.25.0"
types-requests = ">=2.25.0"
pyinstaller = "^6.13.0"

[tool.poetry.scripts]
simkl-mps = "simkl_mps.cli:main"

[tool.poetry.extras]
linux = [
    "python-xlib",
]
macos = [
    "pyobjc",
]
linux-full = [
    "python-xlib",
    "PyGObject",
]

[tool.setuptools]
include-package-data = true

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
